--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -325,6 +325,8 @@ nav: # 导航栏
       - Contribution Guide - 贡献指南: more/CONTRIBUTING.md
       - Change Log - 更新日志: more/CHANGELOG.md
       - License - 项目许可证: more/LICENSE.md
+      - Security - 安全策略: more/SECURITY.md
+      - Code of Conduct - 行为准则: more/CODE_OF_CONDUCT.md
 
   - Projects / 项目:
       - Overview - 项目概览: projects/index.md
