--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,8 +47,8 @@ version = { attr = "tkintertools.__version__" }
 include = ["tkintertools*"]
 namespaces = false
 
-[tool.setuptools.package-data]
-pypackage = ["tkintertools/*/*.json"]
+# [tool.setuptools.package-data]
+# pypackage = ["tkintertools/*/*.json"]
 
 # python -m build
 # python -m twine upload dist/*
