--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -170,6 +170,16 @@ theme: # 主题设置
     # annotation: material/arrow-right-circle # 提示按钮的图标，详细操作见 https://squidfunk.github.io/mkdocs-material/reference/annotations/#in-content-tabs-tab-1
 
 extra: # 额外设定
+  alternate:
+    - name: 简体中文
+      link: /
+      lang: zh
+    - name: English
+      link: /en/
+      lang: en
+  # version:
+  #   provider: mike
+  #   default: stable
   homepage: . # 左上角徽标链接的地址（此处为一个点，也就是主页）
   annotate: # 允许代码块非注释内的提示，我也不太懂什么意思，貌似是可以在代码里面加悬浮提示框，而不只是在注释中（感觉这样不好，虽然我不用，但不能没有）
     json: [.s2]
@@ -249,8 +259,8 @@ plugins: # 插件
 nav: # 导航栏
   - Home / 主页:
       - Profile - 简介: index.md
-      - License - 项目许可证: LICENSE.md
-      - Todo - 任务清单: TODO.md
+      - License - 项目许可: LICENSE.md
+      - Todo - 待办事项: TODO.md
       - Changelog - 更新日志: CHANGELOG.md
       - Contribution Guide - 贡献指南: CONTRIBUTING.md
       - Security Policy - 安全策略: SECURITY.md
