--- a/.github/ISSUE_TEMPLATE/documentation.yml
+++ b/.github/ISSUE_TEMPLATE/documentation.yml
@@ -1,6 +1,6 @@
 name: 📑 Documentation
 description: Create a report to help us improve the documentation.
-labels: "documentation"
+labels: "📑 Documentation"
 
 body:
   - type: markdown
