--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,5 @@
 blank_issues_enabled: true
 contact_links:
-  - name: 💬 Questions & Answers
+  - name: Questions & Answers
     url: https://github.com/Xiaokang2022/tkintertools/discussions/categories/q-a
     about: Please ask and answer questions here.
