--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -177,8 +177,9 @@ extra: # 额外设定
     - name: English
       link: /en/
       lang: en
-  # version:
-  #   provider: mike
+  version:
+    provider: mike
+    alias: true
   homepage: . # 左上角徽标链接的地址（此处为一个点，也就是主页）
   annotate: # 允许代码块非注释内的提示，我也不太懂什么意思，貌似是可以在代码里面加悬浮提示框，而不只是在注释中（感觉这样不好，虽然我不用，但不能没有）
     json: [.s2]
@@ -219,6 +220,14 @@ plugins: # 插件
       separator: '[\s\u200b\-_,:!=\[\]()"`/]+|\.(?!\d)|&[lg]t;|(?!\b)(?=[A-Z][a-z])' # 分隔符，我也不懂，我从官方那里找来的
       lang: # 支持的语言
         - zh # 中文
+  - mike:
+      alias_type: symlink
+      redirect_template: null
+      deploy_prefix: ''
+      canonical_version: null
+      version_selector: true
+      css_dir: css
+      javascript_dir: js
   - git-revision-date-localized: # 文章日期显示插件（pip install mkdocs-git-revision-date-localized-plugin）注意：build 时此插件加载非常缓慢！
       enable_creation_date: true # 显示创建的日期
       type: datetime # 每页底下显示最后更新日期，类型是 datatime（日期+时间），或者 data（只有日期）等
