--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -280,7 +280,7 @@ nav: # 导航栏
       # - 前言: tutorials/3.0.0/0-1.md
 
   - Tutorials / 教程:
-      - 前言: tutorials/2.6.21/0-1.md
+      - 第零章：前言: tutorials/2.6.21/0-1.md
       - 第一章：安装与初识:
           - 1.1 安装 tkintertools: tutorials/2.6.21/1-1.md
           - 1.2 认识 tkintertools: tutorials/2.6.21/1-2.md
@@ -350,7 +350,12 @@ nav: # 导航栏
 
   - Projects / 项目:
       - Overview - 项目概览: projects/index.md
-  
+      - 1. Intelligent Magic Cube: projects/1.md
+      - 2. Chinese Chess: projects/2.md
+      - 3. Super Gobang: projects/3.md
+      - 4. Todo List: projects/4.md
+      - 5. Login2.0: projects/5.md
+
   - Videos / 视频:
       - Overview - 视频概览: videos/index.md
       - 2024-06-18: videos/pages/2024-06-18.md
