--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -277,7 +277,45 @@ nav: # 导航栏
       - Sponsor this Project - 赞助项目: Sponsor.md
 
   - Tutorials / 教程:
-      - 第零章：前言: tutorials/3.0.0/0-0.md
+      - 第零章：前言: tutorials/0-0.md
+      - 第一章：简单体验:
+          - 1.1 安装 tkintertools: tutorials/1-1.md
+          - 1.2 实现一个简单的界面: tutorials/1-2.md
+          - 1.2 框架概述: tutorials/1-3.md
+      # - 第二章：容器部件:
+      #     - 2.1 窗口容器部件: tutorials/1-1.md
+      #     - 2.2 画布容器部件: tutorials/1-1.md
+      # - 第三章：基本部件:
+      #     - 3.1 信息类部件: tutorials/1-1.md
+      #     - 3.2 功能类部件: tutorials/1-1.md
+      #     - 3.3 高级部件: tutorials/1-1.md
+      # - 第四章：界面布局:
+      #     - 4.1 Place: tutorials/1-1.md
+      #     - 4.2 Pack 和 Grid: tutorials/1-1.md
+      #     - 4.3 混合布局: tutorials/1-1.md
+      # - 第五章：图像:
+      #     - 5.1 图像基础操作: tutorials/1-1.md
+      #     - 5.2 高级操作: tutorials/1-1.md
+      # - 第六章：动画:
+      #     - 6.1 基础动画类: tutorials/1-1.md
+      #     - 6.2 高级动画类: tutorials/1-1.md
+      #     - 6.3 控制器: tutorials/1-1.md
+      # - 第七章：颜色:
+      #     - 7.1 RGB: tutorials/1-1.md
+      #     - 7.2 HSL: tutorials/1-1.md
+      #     - 7.3 RGBA: tutorials/1-1.md
+      # - 第八章：自定义开发:
+      #     - 8.1 自定义容器部件: tutorials/1-1.md
+      #     - 8.2 自定义基础部件: tutorials/1-1.md
+      #     - 8.3 自定义组件: tutorials/1-1.md
+      #     - 8.4 自定义控制器: tutorials/1-1.md
+      #     - 8.5 自定义动画: tutorials/1-1.md
+      # - 第九章：杂项:
+      #     - 9.1 混合 tkinter 开发: tutorials/1-1.md
+      #     - 9.2 matplotlib 扩展包: tutorials/1-1.md
+      #     - 9.3 3D 扩展包: tutorials/1-1.md
+      #     - 9.4 Demos & Projects: tutorials/1-1.md
+      
 
   # - Tutorials / 教程:
   #     - 第零章：前言: tutorials/2.6.21/0-1.md
