--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,7 @@ site_name: tkintertools # 站点名称
 site_url: https://Xiaokang2022.github.io/tkintertools/ # 站点链接
 repo_url: https://github.com/Xiaokang2022/tkintertools # 仓库地址
 repo_name: Xiaokang2022/tkintertools # 仓库名称
-edit_uri: edit/docs/ # 编辑地址（页面会出现编辑按钮）
+edit_uri: edit/docs/docs # 编辑地址（页面会出现编辑按钮）
 site_description: Official website of tkintertools  # 站点描述
 site_author: Xiaokang2022 # 站点作者
 copyright: Copyright &copy; 2022 Xiaokang2022 # 版权信息（会出现在左下角）
@@ -68,7 +68,6 @@ markdown_extensions:
           class: mermaid
           format:
             !!python/name:pymdownx.superfences.fence_code_format # 不清楚干啥的
-
 
   - pymdownx.tabbed: # 允许块（如代码块）添加标签，实现多语言等效果
       alternate_style: true # 唯一支持的样式，不打开等于用不了
@@ -203,9 +202,6 @@ extra_javascript: # 额外 JS
   - extra/js/mathjax.js # 保证数学表达式能正确显示的运行时环境（下面两个也是）
   - https://polyfill.io/v3/polyfill.min.js?features=es6
   - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
-  - https://busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js # 不蒜子统计脚本
-  - https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js # 不蒜子数据修正需求文件
-  - extra/js/modify.js # 不蒜子数据修正（这个要放在需求文件的后面）
 
 extra_css: # 额外 CSS
   - extra/css/extra.css # 加载自定义的样式
