--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -251,21 +251,35 @@ plugins: # 插件
 
 nav: # 导航栏
   - Home / 主页:
-      - Homepage - 主页: index.md
-      - License - 项目许可: LICENSE.md
-      - Changelog - 更新日志: CHANGELOG.md
-      - Todo - 待办事项: TODO.md
-      - Contribution Guide - 贡献指南: CONTRIBUTING.md
-      - Security Policy - 安全策略: SECURITY.md
-      - Code of Conduct - 行为准则: CODE_OF_CONDUCT.md
-      - Sponsor this Project - 赞助项目: Sponsor.md
+      - Homepage / 主页: index.md
+      - License / 项目许可: LICENSE.md
+      - Changelog / 更新日志: CHANGELOG.md
+      - Todo / 待办事项: TODO.md
+      - Contribution Guide / 贡献指南: CONTRIBUTING.md
+      - Security Policy / 安全策略: SECURITY.md
+      - Code of Conduct / 行为准则: CODE_OF_CONDUCT.md
+      - Sponsor this Project / 赞助项目: Sponsor.md
 
   - Tutorials & Documents / 教程和文档: https://xiaokang2022.github.io/tkintertools-docs/
 
+  - Projects / 项目:
+      - Overview - 项目概览: projects/index.md
+      - 1. Intelligent Magic Cube: projects/pages/1.md
+      - 2. Chinese Chess: projects/pages/2.md
+      - 3. Super Gobang: projects/pages/3.md
+      - 4. Todo List: projects/pages/4.md
+      - 5. Login2.0: projects/pages/5.md
+
+  - Videos / 视频:
+      - Overview - 视频概览: videos/index.md
+      - tkintertools 又更新啦！: videos/pages/3.md
+      - 碾压 tkinter 的 UI 框架：tkintertools 3.0.0 正式进入 beta 公测阶段: videos/pages/2.md
+      - 这还是你记忆中的 tkinter 的程序吗？？？: videos/pages/1.md
+
   - News / 新闻:
-      - Series 3 - 系列 3:
+      - Series 3 / 系列 3:
           - 3.0.0(pre): news/3.0.0/News.md
-      - Series 2 - 系列 2:
+      - Series 2 / 系列 2:
           - 2.6.21: news/2.6.21/News.md
           - 2.6.20: news/2.6.20/News.md
           - 2.6.19: news/2.6.19/News.md
@@ -282,17 +296,3 @@ nav: # 导航栏
           - 2.6.8: news/2.6.8/News.md
           - 2.6.7: news/2.6.7/News.md
           - 2.6.6: news/2.6.6/News.md
-
-  - Projects / 项目:
-      - Overview - 项目概览: projects/index.md
-      - 1. Intelligent Magic Cube: projects/pages/1.md
-      - 2. Chinese Chess: projects/pages/2.md
-      - 3. Super Gobang: projects/pages/3.md
-      - 4. Todo List: projects/pages/4.md
-      - 5. Login2.0: projects/pages/5.md
-
-  - Videos / 视频:
-      - Overview - 视频概览: videos/index.md
-      - tkintertools 又更新啦！: videos/pages/3.md
-      - 碾压 tkinter 的 UI 框架：tkintertools 3.0.0 正式进入 beta 公测阶段: videos/pages/2.md
-      - 这还是你记忆中的 tkinter 的程序吗？？？: videos/pages/1.md
