--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -265,6 +265,7 @@ nav:
 
   - Videos / 视频:
       - Overview - 视频概览: videos/index.md
+      - 干掉 tkinter！tkintertools 大更新啦！: videos/pages/4.md
       - tkintertools 又更新啦！: videos/pages/3.md
       - 碾压 tkinter 的 UI 框架：tkintertools 3.0.0 正式进入 beta 公测阶段: videos/pages/2.md
       - 这还是你记忆中的 tkinter 的程序吗？？？: videos/pages/1.md
