disabled canvas-nest.js

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -210,7 +210,7 @@ extra_javascript:
   - extra/javascript/shortcuts.js # 绑定左右键换页的键盘快捷键
   - extra/javascript/mouse.js # 鼠标点击烟花效果
   - extra/javascript/typing.js # 打字机效果
-  - extra/javascript/canvas-nest.js # 背景效果
+  # - extra/javascript/canvas-nest.js # 背景效果
   - extra/javascript/tongji.baidu.js # 百度统计脚本
   - extra/javascript/mathjax.js # 保证数学表达式能正确显示的运行时环境（下面的也是）
   - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
